unpackaged/main/default/objects/Financial_Account__c/fields/Account_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Account_Nickname__c</fullName>
    <description>The nickname the advisor typed when adding the account in the envelope wizard. Name is seeded from it and then rebuilt (owner - registration type - account #), so this keeps what the advisor actually called the account.</description>
    <inlineHelpText>What the advisor called this account when adding it in the envelope wizard.</inlineHelpText>
    <label>Account Nickname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>