unpackaged/main/default/objects/Financial_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>