unpackaged/main/default/objects/Financial_Account__c/fields/Account_Number_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_for_Report__c</fullName>
    <label>Account Number for Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>