unpackaged/main/default/objects/Financial_Account__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisor Only</fullName>
            </value>
            <value>
                <fullName>DB-Copy</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Manually Managed</fullName>
            </value>
            <value>
                <fullName>Non-Downloading</fullName>
            </value>
            <value>
                <fullName>Normal Downloading</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>