unpackaged/main/default/objects/Financial_Account__c/fields/Additional_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Additional_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Purchase?</label>
    <type>Checkbox</type>
</CustomField>