unpackaged/main/default/objects/Financial_Account__c/fields/Administrative_Fee__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Fee__c</fullName>
    <label>Administrative Fee</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>