unpackaged/main/default/objects/Financial_Account__c/fields/Anticipates_Exercising_Income_Features__c.field-meta.xml
<CustomField>
    <fullName>Anticipates_Exercising_Income_Features__c</fullName>
    <label>Anticipates Exercising Income Features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Within 1-5 Years</fullName>
            </value>
            <value>
                <fullName>Within 6-10 Years</fullName>
            </value>
            <value>
                <fullName>Over 10 Years</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>