unpackaged/main/default/objects/Financial_Account__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DFPG_Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>