unpackaged/main/default/objects/Financial_Account__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brokerage</label>
    <type>Checkbox</type>
</CustomField>