unpackaged/main/default/objects/Financial_Account__c/fields/Cash_Balance__c.field-meta.xml
<CustomField>
    <fullName>Cash_Balance__c</fullName>
    <label>Cash Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>