unpackaged/main/default/objects/Financial_Account__c/fields/Charity_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Charity_Sponsor__c</fullName>
    <label>Charity Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>