unpackaged/main/default/objects/Financial_Account__c/fields/Courtesy_Account_Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Account_Agreement_Signed_Date__c</fullName>
    <label>Courtesy Account Agreement Signed Date</label>
    <type>Date</type>
</CustomField>