unpackaged/main/default/objects/Financial_Account__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401 GO</fullName>
            </value>
            <value>
                <fullName>AXA</fullName>
            </value>
            <value>
                <fullName>Advisors Capital Management</fullName>
            </value>
            <value>
                <fullName>Alerus</fullName>
            </value>
            <value>
                <fullName>American Funds</fullName>
                <label>AMERICAN FUNDS</label>
            </value>
            <value>
                <fullName>American Funds (A shrs)</fullName>
            </value>
            <value>
                <fullName>American Funds (C Shares)</fullName>
            </value>
            <value>
                <fullName>American Funds Distributors</fullName>
            </value>
            <value>
                <fullName>American Funds F2</fullName>
                <label>AMERICAN FUNDS F2</label>
            </value>
            <value>
                <fullName>American Funds F2 Shares</fullName>
            </value>
            <value>
                <fullName>Ascensus</fullName>
            </value>
            <value>
                <fullName>AssetMark</fullName>
            </value>
            <value>
                <fullName>Brinker</fullName>
            </value>
            <value>
                <fullName>Brinker Capital Investments</fullName>
            </value>
            <value>
                <fullName>Brinker Financial Group</fullName>
            </value>
            <value>
                <fullName>CB&amp;T</fullName>
            </value>
            <value>
                <fullName>CNB</fullName>
            </value>
            <value>
                <fullName>City Park</fullName>
            </value>
            <value>
                <fullName>Community National Bank</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
                <label>DIRECT</label>
            </value>
            <value>
                <fullName>Direct (CNB)</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>ETC Brokerage</fullName>
            </value>
            <value>
                <fullName>ETC Institutional</fullName>
            </value>
            <value>
                <fullName>Equitable</fullName>
            </value>
            <value>
                <fullName>Equity Trust</fullName>
            </value>
            <value>
                <fullName>Equity Trust Company</fullName>
            </value>
            <value>
                <fullName>Fidelity</fullName>
                <label>FIDELITY</label>
            </value>
            <value>
                <fullName>Fidelity Test</fullName>
            </value>
            <value>
                <fullName>FortitudeRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>