unpackaged/main/default/objects/Financial_Account__c/fields/Death_Benefit_Impact__c.field-meta.xml
<CustomField>
    <fullName>Death_Benefit_Impact__c</fullName>
    <label>Death Benefit Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at All</fullName>
            </value>
            <value>
                <fullName>Moderately</fullName>
            </value>
            <value>
                <fullName>Significantly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>