unpackaged/main/default/objects/Financial_Account__c/fields/Direct_or_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_Brokerage__c</fullName>
    <label>Direct or Brokerage?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>