unpackaged/main/default/objects/Financial_Account__c/fields/Do_Not_Create_FinAcct__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_FinAcct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create FinAcct</label>
    <type>Checkbox</type>
</CustomField>