unpackaged/main/default/objects/Financial_Account__c/fields/Does_the_Product_Include_a_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Product_Include_a_Bonus__c</fullName>
    <label>Does the Product Include a Bonus?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>