unpackaged/main/default/objects/Financial_Account__c/fields/DPI__c.field-meta.xml
<CustomField>
    <fullName>DPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPI</label>
    <type>Checkbox</type>
</CustomField>