unpackaged/main/default/objects/Financial_Account__c/fields/DuplicateFinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>DuplicateFinancialAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a temporary field used for Scott&#39;s duplicate financial account project.</description>
    <label>DuplicateFinancialAccount</label>
    <type>Checkbox</type>
</CustomField>