unpackaged/main/default/objects/Financial_Account__c/fields/ERISA__c.field-meta.xml
<CustomField>
    <fullName>ERISA__c</fullName>
    <label>ERISA Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Fee of % per year</fullName>
            </value>
            <value>
                <fullName>Flat Fee $ per year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>