unpackaged/main/default/objects/Financial_Account__c/fields/ERISA_Annual_Fee_Percentage_Amount__c.field-meta.xml
<CustomField>
    <fullName>ERISA_Annual_Fee_Percentage_Amount__c</fullName>
    <label>ERISA Annual Fee Percentage Amount</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>