unpackaged/main/default/objects/Financial_Account__c/fields/ERISA_Flat_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>ERISA_Flat_Fee_Amount__c</fullName>
    <label>ERISA Flat Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>