unpackaged/main/default/objects/Financial_Account__c/fields/External_Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Source_System_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Source System Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>