unpackaged/main/default/objects/Financial_Account__c/fields/Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Fee_Schedule__c</fullName>
    <description>Advisory fee schedule for this account, as a percentage. Carried over from the retired FinServ Financial Account field of the same name (Percent 5,3) when the Financial Account record page moved to this object (2026-09-08).</description>
    <label>Fee Schedule</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>