unpackaged/main/default/objects/Financial_Account__c/fields/Fiduciary_Services__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Services__c</fullName>
    <label>Fiduciary Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>Non-discretionary investment advice to the Client</fullName>
            </value>
            <value>
                <fullName>Assistance with the selection of a broad range of investment options</fullName>
            </value>
            <value>
                <fullName>Assistance in the development of an investment policy statement (IPS)</fullName>
            </value>
            <value>
                <fullName>Assistance in monitoring investment options</fullName>
            </value>
            <value>
                <fullName>Meeting with Client</fullName>
            </value>
            <value>
                <fullName>Non-discretionary investment advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>