unpackaged/main/default/objects/Financial_Account__c/fields/FinAcctId__c.field-meta.xml
<CustomField>
    <fullName>FinAcctId__c</fullName>
    <label>FinAcctId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>