unpackaged/main/default/objects/Financial_Account__c/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipName>Wizard_Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>