unpackaged/main/default/objects/Financial_Account__c/fields/Income_Features_Impact__c.field-meta.xml
<CustomField>
    <fullName>Income_Features_Impact__c</fullName>
    <label>Income Features Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not at All</fullName>
            </value>
            <value>
                <fullName>Moderately</fullName>
            </value>
            <value>
                <fullName>Significantly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>