unpackaged/main/default/objects/Financial_Account__c/fields/Is_529_Out_of_State__c.field-meta.xml
<CustomField>
    <fullName>Is_529_Out_of_State__c</fullName>
    <label>Is 529 Out of State?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>