unpackaged/main/default/objects/Financial_Account__c/fields/IsCreatedFromFinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedFromFinancialAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreatedFromFinancialAccount</label>
    <type>Checkbox</type>
</CustomField>