unpackaged/main/default/objects/Financial_Account__c/fields/isDAOEligible__c.field-meta.xml
<CustomField>
    <fullName>isDAOEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDAOEligible</label>
    <type>Checkbox</type>
</CustomField>