unpackaged/main/default/objects/Financial_Account__c/fields/Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>WFAJointOwner</relationshipName>
    <type>Lookup</type>
</CustomField>