unpackaged/main/default/objects/Financial_Account__c/fields/Joint_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner_Name__c</fullName>
    <formula>Joint_Owner__r.FirstName + &#39; &#39; + Joint_Owner__r.LastName</formula>
    <label>Joint Owner Name</label>
    <type>Text</type>
</CustomField>