unpackaged/main/default/objects/Financial_Account__c/fields/Maestro_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Account_Type__c</fullName>
    <label>Maestro Account Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>