unpackaged/main/default/objects/Financial_Account__c/fields/Maestro_Trade_Loader_Case__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Trade_Loader_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maestro Trade Loader Case</label>
    <type>Checkbox</type>
</CustomField>