unpackaged/main/default/objects/Financial_Account__c/fields/Managed_Account_Platform__c.field-meta.xml
<CustomField>
    <fullName>Managed_Account_Platform__c</fullName>
    <label>Managed Account Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AltMS</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>AMS (Wrap)</fullName>
            </value>
            <value>
                <fullName>AMS+</fullName>
            </value>
            <value>
                <fullName>BD Exclusion</fullName>
            </value>
            <value>
                <fullName>Courtesy Account</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>DMS (Wrap)</fullName>
            </value>
            <value>
                <fullName>EPS</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
            </value>
            <value>
                <fullName>TMS</fullName>
            </value>
            <value>
                <fullName>TMS (Wrap)</fullName>
            </value>
            <value>
                <fullName>AF2</fullName>
                <isActive>false</isActive>
                <label>AF2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>