unpackaged/main/default/objects/Financial_Account__c/fields/Mortality_Expense_Risk_Fee__c.field-meta.xml
<CustomField>
    <fullName>Mortality_Expense_Risk_Fee__c</fullName>
    <label>Mortality &amp; Expense Risk Fee</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>