unpackaged/main/default/objects/Financial_Account__c/fields/Needing_Principal_from_Product__c.field-meta.xml
<CustomField>
    <fullName>Needing_Principal_from_Product__c</fullName>
    <label>Needing Principal from Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Within 1-5 Years</fullName>
            </value>
            <value>
                <fullName>Within 6-10 Years</fullName>
            </value>
            <value>
                <fullName>Over 10 Years</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>