unpackaged/main/default/objects/Financial_Account__c/fields/Non_Fiduciary_Services__c.field-meta.xml
<CustomField>
    <fullName>Non_Fiduciary_Services__c</fullName>
    <label>Non-Fiduciary Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>Assistance in the education of the participants in the Plan</fullName>
            </value>
            <value>
                <fullName>Assistance in the group enrollment meetings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>