unpackaged/main/default/objects/Financial_Account__c/fields/Original_Surrender_Period__c.field-meta.xml
<CustomField>
    <fullName>Original_Surrender_Period__c</fullName>
    <label>Original Surrender Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>