unpackaged/main/default/objects/Financial_Account__c/fields/Orion_Custodian_ID_text__c.field-meta.xml
<CustomField>
    <fullName>Orion_Custodian_ID_text__c</fullName>
    <label>Orion Custodian ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>