unpackaged/main/default/objects/Financial_Account__c/fields/Orion_Custodian_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Orion_Custodian_Name_text__c</fullName>
    <label>Custodian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>