unpackaged/main/default/objects/Financial_Account__c/fields/Other_Expense_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Expense_Name__c</fullName>
    <label>Other Expense Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>