unpackaged/main/default/objects/Financial_Account__c/fields/Other_Expense_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Other_Expense_Percentage__c</fullName>
    <label>Other Expense Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>