unpackaged/main/default/objects/Financial_Account__c/fields/Other_Share_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Share_Class_Description__c</fullName>
    <label>Other Share Class Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>