unpackaged/main/default/objects/Financial_Account__c/fields/Primary_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner_Name__c</fullName>
    <formula>Primary_Owner__r.FirstName + &#39; &#39; + Primary_Owner__r.LastName</formula>
    <label>Primary Owner Name</label>
    <type>Text</type>
</CustomField>