unpackaged/main/default/objects/Financial_Account__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>529</fullName>
            </value>
            <value>
                <fullName>Alternative Investment</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Variable Annuity</fullName>
            </value>
            <value>
                <fullName>Variable Life Insurance</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
                <isActive>false</isActive>
                <label>Brokerage</label>
            </value>
            <value>
                <fullName>Insurance Product</fullName>
                <isActive>false</isActive>
                <label>Insurance Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>