unpackaged/main/default/objects/Financial_Account__c/fields/Push_Changes_to_FinSer_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Push_Changes_to_FinSer_Financial_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push Changes to FinSer Financial Account</label>
    <type>Checkbox</type>
</CustomField>