unpackaged/main/default/objects/Financial_Account__c/fields/Record_Keeper__c.field-meta.xml
<CustomField>
    <fullName>Record_Keeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Keeper</label>
    <referenceTo>Record_Keeper__c</referenceTo>
    <relationshipName>DFPG_Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>