unpackaged/main/default/objects/Financial_Account__c/fields/Reg_BI_Best_Interest_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Reg_BI_Best_Interest_Rationale__c</fullName>
    <label>Reg BI Best Interest Rationale</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>