unpackaged/main/default/objects/Financial_Account__c/fields/Reg_BI_Client_Override__c.field-meta.xml
<CustomField>
    <fullName>Reg_BI_Client_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reg BI Client Override</label>
    <type>Checkbox</type>
</CustomField>