unpackaged/main/default/objects/Financial_Account__c/fields/Reg_BI_Client_Override_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Reg_BI_Client_Override_Explanation__c</fullName>
    <label>Reg BI Client Override Explanation</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>