unpackaged/main/default/objects/Financial_Account__c/fields/Reg_BI_Rationale_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reg_BI_Rationale_Approved__c</fullName>
    <label>Reg BI Rationale Approved</label>
    <type>DateTime</type>
</CustomField>