unpackaged/main/default/objects/Financial_Account__c/fields/Reg_BI_Rationale_Approver__c.field-meta.xml
<CustomField>
    <fullName>Reg_BI_Rationale_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reg BI Rationale Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DFPG_Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>