unpackaged/main/default/objects/Financial_Account__c/fields/Reg_BI_Rationale_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Reg_BI_Rationale_Provided_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reg BI Rationale Provided By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DFPG_Financial_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>