unpackaged/main/default/objects/Financial_Account__c/fields/Registered_Rep_Involved_in_Sale__c.field-meta.xml
<CustomField>
    <fullName>Registered_Rep_Involved_in_Sale__c</fullName>
    <label>Registered Rep Involved in Sale?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>